Change the way we calculate max-element-width for blocks with floaters:  stop trying (and sometimes failing) to ensure that there can always be text next to the floater.  b=186593  r+sr=roc+moz