layout/generic/nsBlockBandData.h
@@ -86,24 +86,6 @@ public:
     return mRightFloaters;
   }
 
-  // Return the impact on the max-element-width for this band by
-  // computing the maximum width and maximum height of all the
-  // floaters.
-  void GetMaxElementWidth(nsIPresContext* aPresContext,
-                          nscoord* aResult) const;
-
-  // Utility method to save away the max-element-width associated with
-  // a floating frame.
-  static void StoreMaxElementWidth(nsIPresContext* aPresContext,
-                                   nsIFrame* aFrame,
-                                   nscoord aMaxElementWidth);
-
-  // Utility method to recover a stored max-element-width value
-  // associated with a floating frame.
-  static void RecoverMaxElementWidth(nsIPresContext* aPresContext,
-                                     nsIFrame* aFrame,
-                                     nscoord* aResult);
-
 #ifdef DEBUG
   void List();
 #endif
